@@ -5,9 +5,9 @@
 \alias{makeUndersampleWrapper}
 \title{Fuse learner with simple ove/underrsampling for imbalancy correction in binary classification.}
 \usage{
-makeUndersampleWrapper(learner, usw.rate = 1)
+makeUndersampleWrapper(learner, usw.rate = 1, cl = NULL)
 
-makeOversampleWrapper(learner, osw.rate = 1)
+makeOversampleWrapper(learner, osw.rate = 1, cl = NULL)
 }
 \arguments{
 \item{learner}{[\code{\link{Learner}} | \code{character(1)}]\cr
@@ -15,13 +15,17 @@ The learner.
 If you pass a string the learner will be created via \code{\link{makeLearner}}.}
 
 \item{usw.rate}{[\code{numeric(1)}]\cr
-Factor to downsample the bigger class. Must be between 0 and 1,
+Factor to downsample a class. Must be between 0 and 1,
 where 1 means no downsampling, 0.5 implies reduction to 50 percent
 and 0 would imply reduction to 0 observations.
 Default is 1.}
 
+\item{cl}{[\code{character(1)}]\cr
+Which class should be over- or undersampled. If \code{NULL}, \code{makeOversampleWrapper}
+will take the smaller class and \code{makeUndersampleWrapper} the bigger one.}
+
 \item{osw.rate}{[\code{numeric(1)}]\cr
-Factor to oversample the smaller class. Must be between 1 and \code{Inf},
+Factor to oversample a class. Must be between 1 and \code{Inf},
 where 1 means no oversampling and 2 would mean doubling the class size.
 Default is 1.}
 }
