@@ -39,9 +39,40 @@ test_that("over and undersample works with weights", {
   expect_true(all(task2$weights %in% task$weights))
 })
 
-test_that("oversampling keeps all min obs", {
+test_that("oversampling keeps all min / max obs", {
   y = binaryclass.df[, binaryclass.target]
   z = getMinMaxClass(y)
-  new.inds = sampleBinaryClass(y, 1.05, cl = "min", clreplace = TRUE, othreplace = FALSE)
+  new.inds = sampleBinaryClass(y, 1.05, cl = z$min.name, clreplace = TRUE, othreplace = FALSE)
   expect_true(setequal(intersect(z$min.inds, new.inds), z$min.inds))
+  new.inds = sampleBinaryClass(y, 1.05, cl = z$max.name, clreplace = TRUE, othreplace = FALSE)
+  expect_true(setequal(intersect(z$max.inds, new.inds), z$max.inds))
+})
+
+test_that("control which class gets over or under sampled", {
+  set.seed(getOption("mlr.debug.seed"))
+  #check function oversample(), undersample()
+  y = binaryclass.df[, binaryclass.target]
+  tab1 = table(y)
+  z = getMinMaxClass(y)
+  task = oversample(binaryclass.task, rate = 2, cl = z$max.name)
+  df = getTaskData(task)
+  tab2 = table(df[, binaryclass.target])
+  expect_equal(tab2["R"], tab1["R"])
+  expect_equal(tab2["M"], tab1["M"] * 2)
+  task = undersample(binaryclass.task, rate = 0.5, cl = z$min.name)
+  df = getTaskData(task)
+  tab2 = table(df[, binaryclass.target])
+  expect_equal(tab2["R"], round(tab1["R"] / 2))
+  expect_equal(tab2["M"], tab1["M"])
+
+  #check over- and undersample-wrapper
+  z = getMinMaxClass(binaryclass.df[, binaryclass.target])
+  rdesc = makeResampleDesc("CV", iters = 2)
+  lrn1 = makeLearner("classif.rpart")
+  lrn2 = makeUndersampleWrapper(lrn1, usw.rate = 0.1, cl = z$min.name)
+  r = resample(lrn2, binaryclass.task, rdesc)
+  expect_true(!is.na(r$aggr))
+  lrn2 = makeOversampleWrapper(lrn1, osw.rate = 1.5, cl = z$max.name)
+  r = resample(lrn2, binaryclass.task, rdesc)
+  expect_true(!is.na(r$aggr))
 })
