@@ -20,6 +20,9 @@ mlr_new:
   predict were not passed down correctly
 - Fixed a bug where the function capLargeValues wasn't working if you passed a task.
 - capLargeValues now has a new argument "target", to prevent from capping response values.
+- added functionality to the functions oversample and undersample. It is now possible
+  to control which class to use in the corresponding function via the parameter 'cl'.
+  This also applies to the Over- and UnderSampleWrappers, as well as the OverBaggingWrapper.
 
 - API changes
 -- listLearners now returns a data frame with properties of the learners if
